# blueo-exercises

./: README.md
canny_edge_my_face/: CMakeLists.txt  README.md  package.xml
canny_edge_my_face/include/canny_edge_my_face/: cannyEdge.h
canny_edge_my_face/launch/: canny_launch.launch
canny_edge_my_face/src/: cannyEdge.cpp
canny_edge_my_face/src/nodes/: cannyEdge_node.cpp
performance_tests/: CMakeLists.txt  README.md  package.xml
performance_tests/cfg/: perfTests.cfg
performance_tests/include/performance_tests/: publisher.h  subscriber.h
performance_tests/launch/: cpptocpp.launch  cpptopy.launch  pytocpp.launch  pytopy.launch  tools.launch
performance_tests/src/: publisher.cpp  pubpython.py  subpython.py  subscriber.cpp
performance_tests/src/nodes/: publisher_node.cpp  subscriber_node.cpp
