<package format="2">
  <name>performance_tests</name>
  <version>0.0.0</version>
  <description>
    Publishers and subscribers with Python and C++
  </description>
  <maintainer email="beatrizfusaro@gmail.com">beatrizfusaro</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

</package>
